# Zeus_Engine

./: .gitignore  Cargo.toml  README.md  build.rs  clippy.toml  rustfmt.toml  suity.toml
ci/: dev.build.yml  staging.build.yml
ci/jobs/: startup.yml  test.yml
ci/stages/: build.yml  check.yml
ci/steps/: install-rust.yml  test.yml
data/: quad.frag  quad.vert
data/shaders/: quad.frag  quad.vert
docs/: RoadmapV1.md
docs/tutorial notes/: 1.vulkan-tutorial.md  2.vulkan-setup.md  3.presentation.md  4.graphics-pipeline.md  5.drawing.md  6.vertex-buffers.md  7.uniform-buffers.md
src/: lib.rs  main.rs
src/Math/: matrix.rs  mod.rs  utils.rs  vector.rs
src/render/: adapter.rs  backend.rs  buffer.rs  constants.rs  debug.rs  desc.rs  device.rs  image.rs  mod.rs  pass.rs  pipeline.rs  platforms.rs  renderer.rs  swapchain.rs  tools.rs  utils.rs
src/render/shaders/: compile.ps1
src/render_old/: constants.rs  device.rs  drawing.rs  pipeline.rs  structures.rs  window.rs
src/render_old/shaders/: compile.ps1
src/render_old/shaders/src/: shader.vert
zeus_core/: cargo.toml  suity.toml
zeus_core/src/: input.rs  lib.rs  time.rs
zeus_core/src/math/: matrix.rs  mod.rs  point.rs  vector.rs
zeus_core/src/math/angles/: mod.rs
zeus_core/src/math/matrix/: matrix2.rs  matrix3.rs  matrix4.rs  mod.rs
zeus_core/src/math/point/: mod.rs  point2.rs  point3.rs  point4.rs
zeus_core/src/math/vector/: mod.rs  vector2.rs  vector3.rs  vector4.rs
zeus_physics/: cargo.toml
zeus_render/: cargo.toml  suity.toml
zeus_render/src/: adapter.rs  backend.rs  buffer.rs  camera.rs  constants.rs  desc.rs  device.rs  error.rs  framebuffer.rs  image.rs  lib.rs  model.rs  obj.rs  pass.rs  pipeline.rs  renderer.rs  swapchain.rs
