[package]
name = "zeus_engine"
version = "0.1.0"
authors = ["Vasilis Mourtzis <vasilis.mourtzis@outlook.com>"]
edition = "2018"

[dependencies]
ash     = "0.29.0"
num       = "0.2"
cgmath    = "0.16.1"
image     = "0.21"
memoffset = "0.2"
tobj      = "0.1.6"
gfx-hal       = "0.4"
gfx-backend-vulkan = "0.4"
winit = { version = "0.20.0-alpha4", features = ["web-sys"] }
env_logger = "0.7"
log = "0.4"

imgui       = { version = "0.0.23", optional = true }
imgui-winit = { package = "imgui-winit-support", version = "0.0.23",  optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.5", features = ["windef", "libloaderapi"] }

[build-dependencies]
clippy = {version = "*", optional = false }

[features]
imgui-experiment = ["imgui", "imgui-winit"]