[package]
name = "zeus_engine"
version = "0.1.1"
authors = ["Vasilis Mourtzis <vasilis.mourtzis@outlook.com>"]
edition = "2018"

repository = ""

readme = "README.md"

[workspace]
members = [
    "zeus_core",
    "zeus_render",
    # "zeus_physics"
]

[dependencies]
zeus_core = { path = "zeus_core", version = "0.1.0"}
zeus_render = { path = "zeus_render", version = "0.1.0"}
# zeus_physics = { path = "zeus_physics", version = "0.1.0", optional = true}
log = "0.4"
env_logger = "0.7"
winit = "0.21.0"

# [dev-dependencies]
# env_logger = "0.7"